hide require text in form, fix month value issue in datepicker, remove double scrollbar

--- a/app/containers/TableListingPage/style.scss
+++ b/app/containers/TableListingPage/style.scss
@@ -36,7 +36,7 @@
 
     .table-content {
         max-width: 100%;
-        max-height: 60vh;
+        // max-height: 60vh;
         overflow-x: auto;
 
         .table-content-wrapper {
